--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     min-width: 860px;
     min-height: 600px;
@@ -24,6 +28,7 @@ header {
     opacity: 0;
     min-width: 860px;
 }
+
 
 header li {
     display: block;
@@ -77,6 +82,14 @@ header .logo img {
     perspective: 1000px;
     max-width: 1200px;
     margin: 0 auto;
+    min-height: 100%;
+    margin-bottom: -70px;
+}
+
+.holder:after {
+    content: '';
+    display: block;
+    height: 70px;
 }
 .con {
     position: relative;
@@ -862,6 +875,7 @@ footer {
     z-index: 3;
     color: #939377;
     opacity: 0;
+    height: 70px;
 }
 
 footer a {
@@ -892,7 +906,6 @@ footer.f2 a:hover, footer.f2 a:focus {
     margin: 0 auto;
     padding-left: 50px;
     padding-right: 50px;
-    margin-bottom: 25px;
 }
 
 .stamp {
