--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -36,7 +36,7 @@
 		width: 300px;
 	}
 }
-/*@media screen and (max-width: 750px) {
+@media screen and (max-width: 750px) {
 	.ca-container {
 		width: 400px;
 	}
@@ -44,7 +44,16 @@
 		width: 400px;
 	}
 }
-*/
+
+@media screen and (max-width: 520px) {
+	.ca-container {
+		width: 280px;
+	}
+	.ca-item {
+		width: 280px;
+	}
+}
+
 .ca-item-main{
 	padding:20px;
 	position:absolute;
