--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -458,9 +458,13 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder { /* Internet Explor
     left: 0;
     top: 0;
     position: fixed;
-    z-index: 3;
+    
     height: 100px;
     opacity: 0;
+    -webkit-transform:translateZ(1px);
+    -moz-transform:translateZ(1px);
+    -o-transform:translateZ(1px);
+    transform:translateZ(1px);
 }
 
 .shown-ho {
